--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,14 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!--  Common  -->
+    <color name="background">#ffffff</color>
+    <color name="album_name_list">#ffffff</color>
+    <color name="album_artist_name_list">#b5b5b5</color>
+    <color name="title">#111226</color>
+    <color name="album_artist_name_details">#8e8e93</color>
+    <color name="album_name_details">#111226</color>
+    <color name="back_button_background_shape">#80ffffff</color>
+    <color name="bright_blue">#007aff</color>
 </resources>
